--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Remote Life Sciences Jobs</title>
+    <title>Life Sciences Jobs</title>
   </head>
   <body>
     <!-- begin nav -->
@@ -21,12 +21,11 @@
     <div class="px-4 py-20 sm:px-6 lg:px-8">
       <h1
         class="mx-auto text-center text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl sm:leading-[3.5rem] lg:max-w-4xl">
-        Hand Picked Remote Life Sciences Jobs
+        Hand Picked Life Sciences Jobs
       </h1>
       <p
         class="mx-auto text-center mt-4 max-w-[40rem] text-lg text-gray-600 sm:text-center lg:max-w-xl">
-        The best place to find remote life sciences jobs straight from the
-        employers.
+        The best place to find life sciences jobs straight from the employers.
       </p>
     </div>
     <div class="px-4 py-4 sm:px-6 lg:px-8">
@@ -41,7 +40,7 @@
                   class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
-                    src="img/m2gen-logo.png"
+                    src="img/tri-logo.png"
                     alt="" />
                   <div
                     class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
@@ -51,7 +50,7 @@
                   <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      M2GEN
+                      Technical Resources International Inc.
                     </dd>
                   </div>
                   <div
@@ -65,7 +64,7 @@
                         class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
                         <circle cx="1" cy="1" r="1"></circle>
                       </svg>
-                      Remote / USA
+                      Onsite / Bethesda, MD / USA
                     </dd>
                   </div>
                   <div class="col-span-2 col-start-1 w-full flex-none">
@@ -73,10 +72,10 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://boards.greenhouse.io/m2gen/jobs/4850662004">
+                        href="https://technical-resources-international.jobs.net/jobs?keywords=416%2F136%2F1016">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                        Senior Sales Development Representative
+                        Clinical Research Associate
                       </a>
                     </dd>
                   </div>
@@ -84,12 +83,19 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <!--div class="col-span-3 -ml-2.5 flex-none">
-                  <dt class="sr-only">Salary</dt>
-                  <dd class="flex items-center text-xs leading-6 text-gray-600">
-                    <svg viewBox="0 0 2 2" aria-hidden="true" class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400"><circle cx="1" cy="1" r="1"></circle></svg>$140,000 - $180,000
-                  </dd>
-                </div-->
+                  <div class="col-span-3 -ml-2.5 flex-none">
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $80,000 - $120,000 (estimate)
+                    </dd>
+                  </div>
                 </dl>
               </div>
             </div>
@@ -172,7 +178,7 @@
                   class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
-                    src="img/m2gen-logo.png"
+                    src="img/vtech-logo.png"
                     alt="" />
                   <div
                     class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
@@ -182,7 +188,7 @@
                   <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      M2GEN
+                      Virginia Tech
                     </dd>
                   </div>
                   <div
@@ -196,7 +202,7 @@
                         class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
                         <circle cx="1" cy="1" r="1"></circle>
                       </svg>
-                      Remote / USA
+                      Onsite / Blacksburg, VA / USA
                     </dd>
                   </div>
                   <div class="col-span-2 col-start-1 w-full flex-none">
@@ -204,16 +210,16 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://boards.greenhouse.io/m2gen/jobs/4758416004">
+                        href="https://virginia-tech.talentify.io/job/life-sciences-lab-support-temporary-assignments-blacksburg-va-virginia-tech-524034">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                        Director of Business Development
+                          Life Sciences Lab Support
                       </a>
                     </dd>
                   </div>
                   <div class="col-start-1 mr-2.5 flex-none">
                     <dt class="sr-only">Type</dt>
-                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
+                    <dd class="text-xs leading-6 text-gray-600">Part-time</dd>
                   </div>
                   <!--div class="col-span-3 -ml-2.5 flex-none">
                   <dt class="sr-only">Salary</dt>
@@ -224,7 +230,7 @@
                 </dl>
               </div>
             </div>
-          </li>
+          </li-->
           <li>
             <div class="group relative py-6 sm:rounded-2xl">
               <div
@@ -299,6 +305,21 @@
           <div
             class="flex flex-col items-center justify-between gap-4 border-t border-gray-900/5 py-12 text-xs leading-6 text-gray-500 sm:flex-row">
             <p>© 2023 Life Sciences Jobs. All rights reserved.</p>
+            <p>
+              <a
+                href="https://twitter.com/lscjobs"
+                class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
+                <svg
+                  class="w-5 h-5"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  aria-hidden="true">
+                  <path
+                    d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+                </svg>
+                <span class="sr-only">Twitter page</span>
+              </a>
+            </p>
           </div>
         </div>
       </div>
