finally, the twitter handle

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <p>© 2023 Life Sciences Jobs. All rights reserved.</p>
             <p>
               <a
-                href="https://twitter.com/lscjobs"
+                href="https://twitter.com/liscijobs"
                 class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
                 <svg
                   class="w-5 h-5"
