--- a/index.html
+++ b/index.html
@@ -40,6 +40,286 @@
                   class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
+                    src="img/thermo-fisher-logo.png"
+                    alt="" />
+                  <div
+                    class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
+                </div>
+                <dl
+                  class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
+                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                    <dt class="sr-only">Company</dt>
+                    <dd class="text-xs font-semibold leading-6 text-gray-900">
+                      Thermo Fisher Scientific
+                    </dd>
+                  </div>
+                  <div
+                    class="col-start-3 row-start-2 -ml-2.5 flex-auto sm:ml-0 sm:pl-6">
+                    <dt class="sr-only">Location</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      Remote / USA
+                    </dd>
+                  </div>
+                  <div class="col-span-2 col-start-1 w-full flex-none">
+                    <dt class="sr-only">Title</dt>
+                    <dd
+                      class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
+                      <a
+                        href="https://jobs.thermofisher.com/global/en/job/228641BR/Clinical-Project-Manager-IDD">
+                        <span
+                          class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
+                        Clinical Project Manager (IDD)
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="col-start-1 mr-2.5 flex-none">
+                    <dt class="sr-only">Type</dt>
+                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
+                  </div>
+                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $190,000 - $205,000
+                    </dd>
+                  </div-->
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="group relative py-6 sm:rounded-2xl">
+              <div
+                class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
+              <div class="relative flex items-center">
+                <div
+                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                  <img
+                    class="absolute inset-0 h-full w-full rounded-full object-cover"
+                    src="img/tri-logo.png"
+                    alt="" />
+                  <div
+                    class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
+                </div>
+                <dl
+                  class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
+                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                    <dt class="sr-only">Company</dt>
+                    <dd class="text-xs font-semibold leading-6 text-gray-900">
+                      Technical Resources International Inc.
+                    </dd>
+                  </div>
+                  <div
+                    class="col-start-3 row-start-2 -ml-2.5 flex-auto sm:ml-0 sm:pl-6">
+                    <dt class="sr-only">Location</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      Onsite / Bethesda, MD / USA
+                    </dd>
+                  </div>
+                  <div class="col-span-2 col-start-1 w-full flex-none">
+                    <dt class="sr-only">Title</dt>
+                    <dd
+                      class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
+                      <a
+                        href="https://technical-resources-international.jobs.net/jobs?keywords=660%2F224%2F1086">
+                        <span
+                          class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
+                        Director of Regulatory Affairs
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="col-start-1 mr-2.5 flex-none">
+                    <dt class="sr-only">Type</dt>
+                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
+                  </div>
+                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $190,000 - $205,000
+                    </dd>
+                  </div-->
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="group relative py-6 sm:rounded-2xl">
+              <div
+                class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
+              <div class="relative flex items-center">
+                <div
+                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                  <img
+                    class="absolute inset-0 h-full w-full rounded-full object-cover"
+                    src="img/tri-logo.png"
+                    alt="" />
+                  <div
+                    class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
+                </div>
+                <dl
+                  class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
+                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                    <dt class="sr-only">Company</dt>
+                    <dd class="text-xs font-semibold leading-6 text-gray-900">
+                      Technical Resources International Inc.
+                    </dd>
+                  </div>
+                  <div
+                    class="col-start-3 row-start-2 -ml-2.5 flex-auto sm:ml-0 sm:pl-6">
+                    <dt class="sr-only">Location</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      Onsite / Bethesda, MD / USA
+                    </dd>
+                  </div>
+                  <div class="col-span-2 col-start-1 w-full flex-none">
+                    <dt class="sr-only">Title</dt>
+                    <dd
+                      class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
+                      <a
+                        href="https://technical-resources-international.jobs.net/jobs?keywords=660%2F224%2F1086">
+                        <span
+                          class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
+                        Associate Director of Clinical Operations
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="col-start-1 mr-2.5 flex-none">
+                    <dt class="sr-only">Type</dt>
+                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
+                  </div>
+                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $190,000 - $205,000
+                    </dd>
+                  </div-->
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="group relative py-6 sm:rounded-2xl">
+              <div
+                class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
+              <div class="relative flex items-center">
+                <div
+                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                  <img
+                    class="absolute inset-0 h-full w-full rounded-full object-cover"
+                    src="img/supernus-logo.png"
+                    alt="" />
+                  <div
+                    class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
+                </div>
+                <dl
+                  class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
+                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                    <dt class="sr-only">Company</dt>
+                    <dd class="text-xs font-semibold leading-6 text-gray-900">
+                      Supernus Pharmaceuticals
+                    </dd>
+                  </div>
+                  <div
+                    class="col-start-3 row-start-2 -ml-2.5 flex-auto sm:ml-0 sm:pl-6">
+                    <dt class="sr-only">Location</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      Onsite / Rockville, MD / USA
+                    </dd>
+                  </div>
+                  <div class="col-span-2 col-start-1 w-full flex-none">
+                    <dt class="sr-only">Title</dt>
+                    <dd
+                      class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
+                      <a
+                        href="https://workforcenow.adp.com/mascsr/default/mdf/recruitment/recruitment.html?cid=17ce676e-2087-4a90-a2bb-3b5ae6820df0&jobId=452850">
+                        <span
+                          class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
+                        Director of Clinical Research
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="col-start-1 mr-2.5 flex-none">
+                    <dt class="sr-only">Type</dt>
+                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
+                  </div>
+                  <div class="col-span-3 -ml-2.5 flex-none">
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $190,000 - $205,000
+                    </dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="group relative py-6 sm:rounded-2xl">
+              <div
+                class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
+              <div class="relative flex items-center">
+                <div
+                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                  <img
+                    class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/tri-logo.png"
                     alt="" />
                   <div
@@ -213,7 +493,7 @@
                         href="https://virginia-tech.talentify.io/job/life-sciences-lab-support-temporary-assignments-blacksburg-va-virginia-tech-524034">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                          Life Sciences Lab Support
+                        Life Sciences Lab Support
                       </a>
                     </dd>
                   </div>
@@ -230,7 +510,7 @@
                 </dl>
               </div>
             </div>
-          </li-->
+          </li>
           <li>
             <div class="group relative py-6 sm:rounded-2xl">
               <div
