--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="px-4 py-20 sm:px-6 lg:px-8">
       <h1
         class="mx-auto text-center text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl sm:leading-[3.5rem] lg:max-w-4xl">
-        Hand Picked Life Sciences Jobs
+        Hand-Picked Life Sciences Jobs
       </h1>
       <p
         class="mx-auto text-center mt-4 max-w-[40rem] text-lg text-gray-600 sm:text-center lg:max-w-xl">
