--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       function gtag() {
         dataLayer.push(arguments);
       }
+
       gtag("js", new Date());
 
       gtag("config", "G-XEDRETQ2G2");
@@ -18,6 +19,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <!-- SEO tags -->
+    <meta name="title" content="Life Sciences Jobs">
+    <meta name="description" content="Hand-Picked Life Sciences Jobs. The best place to find life sciences jobs straight from the employers. Updated weekly.">
+    <meta name="keywords" content="life sciences jobs, jobs, life sciences">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <!-- OpenGraph tags -->
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Job Board" />
+    <meta property="og:url" content="https://liscijobs.com" />
+    <meta property="og:site_name" content="Life Sciences Jobs" />
+
     <title>Life Sciences Jobs</title>
   </head>
   <body>
