feat: add twitter card tags

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <meta property="og:title" content="Job Board" />
     <meta property="og:url" content="https://liscijobs.com" />
     <meta property="og:site_name" content="Life Sciences Jobs" />
+    <!-- Twitter card tags -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@liscijobs" />
+    <meta name="twitter:title" content="Life Sciences Jobs" />
+    <meta name="twitter:description" content="Hand-Picked Life Sciences Jobs. The best place to find life sciences jobs straight from the employers. Updated weekly." />
+    <meta name="twitter:image" content="https://liscijobs.com/img/site-logo.png" />
+
 
     <title>Life Sciences Jobs</title>
   </head>
