jobs update and local tailwind toolchain used

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="output.css" />
     <!-- SEO tags -->
-    <meta name="title" content="Life Sciences Jobs">
-    <meta name="description" content="Hand-Picked Life Sciences Jobs. The best place to find life sciences jobs straight from the employers. Updated weekly.">
-    <meta name="keywords" content="life sciences jobs, jobs, life sciences">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
+    <meta name="title" content="Life Sciences Jobs" />
+    <meta
+      name="description"
+      content="Hand-Picked Life Sciences Jobs. The best place to find life sciences jobs straight from the employers. Updated weekly." />
+    <meta name="keywords" content="life sciences jobs, jobs, life sciences" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
     <!-- OpenGraph tags -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
@@ -36,9 +38,12 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@liscijobs" />
     <meta name="twitter:title" content="Life Sciences Jobs" />
-    <meta name="twitter:description" content="Hand-Picked Life Sciences Jobs. The best place to find life sciences jobs straight from the employers. Updated weekly." />
-    <meta name="twitter:image" content="https://liscijobs.com/img/site-logo.png" />
-
+    <meta
+      name="twitter:description"
+      content="Hand-Picked Life Sciences Jobs. The best place to find life sciences jobs straight from the employers. Updated weekly." />
+    <meta
+      name="twitter:image"
+      content="https://liscijobs.com/img/site-logo.png" />
 
     <title>Life Sciences Jobs</title>
   </head>
@@ -71,8 +76,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/thermo-fisher-logo.png"
@@ -99,7 +103,7 @@
                         class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
                         <circle cx="1" cy="1" r="1"></circle>
                       </svg>
-                      Remote / USA
+                      Remote / Morrisville, NC / USA
                     </dd>
                   </div>
                   <div class="col-span-2 col-start-1 w-full flex-none">
@@ -107,10 +111,10 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://jobs.thermofisher.com/global/en/job/228641BR/Clinical-Project-Manager-IDD">
+                        href="https://jobs.thermofisher.com/global/en/job/R-227987/Sr-Med-Writer-Remote-Based">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                        Clinical Project Manager (IDD)
+                        Senior Medical Writer
                       </a>
                     </dd>
                   </div>
@@ -118,7 +122,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                  <div class="col-span-3 -ml-2.5 flex-none">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -128,9 +132,9 @@
                         class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
                         <circle cx="1" cy="1" r="1"></circle>
                       </svg>
-                      $190,000 - $205,000
+                      $90,000 - $110,000 (estimate)
                     </dd>
-                  </div-->
+                  </div>
                 </dl>
               </div>
             </div>
@@ -141,8 +145,76 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
+                  <img
+                    class="absolute inset-0 h-full w-full rounded-full object-cover"
+                    src="img/novavax-logo.png"
+                    alt="" />
+                  <div
+                    class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
+                </div>
+                <dl
+                  class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
+                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                    <dt class="sr-only">Company</dt>
+                    <dd class="text-xs font-semibold leading-6 text-gray-900">
+                      novavax
+                    </dd>
+                  </div>
+                  <div
+                    class="col-start-3 row-start-2 -ml-2.5 flex-auto sm:ml-0 sm:pl-6">
+                    <dt class="sr-only">Location</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      Remote / Gaithersburg, MD / USA
+                    </dd>
+                  </div>
+                  <div class="col-span-2 col-start-1 w-full flex-none">
+                    <dt class="sr-only">Title</dt>
+                    <dd
+                      class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
+                      <a
+                        href="https://www.novavax.com/careers/jobs/cd953ba6-0e31-4d02-a748-f85886b42e42">
+                        <span
+                          class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
+                        Senior Medical Writer
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="col-start-1 mr-2.5 flex-none">
+                    <dt class="sr-only">Type</dt>
+                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
+                  </div>
+                  <div class="col-span-3 -ml-2.5 flex-none">
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $122,000 - $154,000 (estimate)
+                    </dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="group relative py-6 sm:rounded-2xl">
+              <div
+                class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
+              <div class="relative flex items-center">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/tri-logo.png"
@@ -211,8 +283,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/tri-logo.png"
@@ -281,8 +352,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/supernus-logo.png"
@@ -351,8 +421,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/tri-logo.png"
@@ -420,8 +489,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/epam-logo.png"
@@ -489,8 +557,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/vtech-logo.png"
@@ -551,8 +618,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div
-                  class="relative h-[3.125rem] w-[3.125rem] flex-none sm:h-[3.75rem] sm:w-[3.75rem]">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/icon-logo.png"
