--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      Technical Resources International Inc.
+                      Technical Resources international
                     </dd>
                   </div>
                   <div
@@ -296,7 +296,7 @@
                   <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      Technical Resources International Inc.
+                      Technical Resources international
                     </dd>
                   </div>
                   <div
@@ -434,7 +434,7 @@
                   <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      Technical Resources International Inc.
+                      Technical Resources International
                     </dd>
                   </div>
                   <div
