minor typos, keywords, icon sizing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <meta
       name="description"
       content="Hand-Picked Life Sciences Jobs. The best place to find life sciences jobs straight from the employers. Updated weekly." />
-    <meta name="keywords" content="life sciences jobs, jobs, life sciences" />
+    <meta
+      name="keywords"
+      content="life sciences jobs, jobs, life sciences, cro,
+    cra, clinical operations, medical writer, regulatory affairs, clinical
+    research" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
@@ -76,7 +80,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/thermo-fisher-logo.png"
@@ -145,7 +149,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/novavax-logo.png"
@@ -214,7 +218,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/tri-logo.png"
@@ -227,7 +231,7 @@
                   <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      Technical Resources international
+                      Technical Resources International
                     </dd>
                   </div>
                   <div
@@ -283,7 +287,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/tri-logo.png"
@@ -296,7 +300,7 @@
                   <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      Technical Resources international
+                      Technical Resources International
                     </dd>
                   </div>
                   <div
@@ -352,7 +356,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/supernus-logo.png"
@@ -421,7 +425,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/tri-logo.png"
@@ -489,7 +493,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/epam-logo.png"
@@ -557,7 +561,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/vtech-logo.png"
@@ -618,7 +622,7 @@
               <div
                 class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
               <div class="relative flex items-center">
-                <div class="relative h-14 w-14 flex-none sm:h-24 sm:w-24">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/icon-logo.png"
