removing flex-none from key lines

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       Thermo Fisher Scientific
@@ -126,7 +126,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <div class="col-span-3 -ml-2.5 flex-none">
+                  <div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -159,7 +159,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       novavax
@@ -195,7 +195,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <div class="col-span-3 -ml-2.5 flex-none">
+                  <div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -228,7 +228,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       Technical Resources International
@@ -264,7 +264,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                  <!--div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -297,7 +297,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       Technical Resources International
@@ -333,7 +333,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                  <!--div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -366,7 +366,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       Supernus Pharmaceuticals
@@ -402,7 +402,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <div class="col-span-3 -ml-2.5 flex-none">
+                  <div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -435,7 +435,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       Technical Resources International
@@ -471,7 +471,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <div class="col-span-3 -ml-2.5 flex-none">
+                  <div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -503,7 +503,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       EPAM
@@ -539,7 +539,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <div class="col-span-3 -ml-2.5 flex-none">
+                  <div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -571,7 +571,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       Virginia Tech
@@ -607,7 +607,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Part-time</dd>
                   </div>
-                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                  <!--div class="col-span-3 -ml-2.5 flex">
                   <dt class="sr-only">Salary</dt>
                   <dd class="flex items-center text-xs leading-6 text-gray-600">
                     <svg viewBox="0 0 2 2" aria-hidden="true" class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400"><circle cx="1" cy="1" r="1"></circle></svg>$140,000 - $180,000
@@ -632,7 +632,7 @@
                 </div>
                 <dl
                   class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex-none sm:mr-0">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
                       ICON PLC
@@ -669,7 +669,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <!--div class="col-span-3 -ml-2.5 flex-none">
+                  <!--div class="col-span-3 -ml-2.5 flex">
                   <dt class="sr-only">Salary</dt>
                   <dd class="flex items-center text-xs leading-6 text-gray-600">
                     <svg viewBox="0 0 2 2" aria-hidden="true" class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400"><circle cx="1" cy="1" r="1"></circle></svg>$140,000 - $180,000
