novavax job description was wrong

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         href="https://www.novavax.com/careers/jobs/cd953ba6-0e31-4d02-a748-f85886b42e42">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                        Senior Medical Writer
+                        Senior Statistical Programmer
                       </a>
                     </dd>
                   </div>
