--- a/index.html
+++ b/index.html
@@ -83,6 +83,74 @@
                 <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
+                    src="img/syneos-logo.png"
+                    alt="" />
+                  <div
+                    class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
+                </div>
+                <dl
+                  class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
+                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
+                    <dt class="sr-only">Company</dt>
+                    <dd class="text-xs font-semibold leading-6 text-gray-900">
+                      Syneos Health
+                    </dd>
+                  </div>
+                  <div
+                    class="col-start-3 row-start-2 -ml-2.5 flex-auto sm:ml-0 sm:pl-6">
+                    <dt class="sr-only">Location</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      Remote / USA
+                    </dd>
+                  </div>
+                  <div class="col-span-2 col-start-1 w-full flex-none">
+                    <dt class="sr-only">Title</dt>
+                    <dd
+                      class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
+                      <a
+                        href="https://www.syneoshealth.com/careers/jobs/12769294-clinical-trial-manager-ii">
+                        <span
+                          class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
+                        Clinical Trial Manager II
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="col-start-1 mr-2.5 flex-none">
+                    <dt class="sr-only">Type</dt>
+                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
+                  </div>
+                  <div class="col-span-3 -ml-2.5 flex">
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $117,748 (estimate)
+                    </dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="group relative py-6 sm:rounded-2xl">
+              <div
+                class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
+              <div class="relative flex items-center">
+                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
+                  <img
+                    class="absolute inset-0 h-full w-full rounded-full object-cover"
                     src="img/thermo-fisher-logo.png"
                     alt="" />
                   <div
@@ -606,68 +674,6 @@
                   <div class="col-start-1 mr-2.5 flex-none">
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Part-time</dd>
-                  </div>
-                  <!--div class="col-span-3 -ml-2.5 flex">
-                  <dt class="sr-only">Salary</dt>
-                  <dd class="flex items-center text-xs leading-6 text-gray-600">
-                    <svg viewBox="0 0 2 2" aria-hidden="true" class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400"><circle cx="1" cy="1" r="1"></circle></svg>$140,000 - $180,000
-                  </dd>
-                </div-->
-                </dl>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="group relative py-6 sm:rounded-2xl">
-              <div
-                class="absolute -inset-x-4 -inset-y-px bg-gray-50 opacity-0 group-hover:opacity-100 sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></div>
-              <div class="relative flex items-center">
-                <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
-                  <img
-                    class="absolute inset-0 h-full w-full rounded-full object-cover"
-                    src="img/icon-logo.png"
-                    alt="" />
-                  <div
-                    class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
-                </div>
-                <dl
-                  class="ml-4 flex flex-auto flex-wrap gap-x-2 gap-y-1 overflow-hidden sm:ml-6 sm:grid sm:grid-cols-[auto_1fr_auto_auto] sm:items-center">
-                  <div class="col-span-2 mr-2.5 flex sm:mr-0">
-                    <dt class="sr-only">Company</dt>
-                    <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      ICON PLC
-                    </dd>
-                  </div>
-                  <div
-                    class="col-start-3 row-start-2 -ml-2.5 flex-auto sm:ml-0 sm:pl-6">
-                    <dt class="sr-only">Location</dt>
-                    <dd
-                      class="flex items-center text-xs leading-6 text-gray-600">
-                      <svg
-                        viewBox="0 0 2 2"
-                        aria-hidden="true"
-                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
-                        <circle cx="1" cy="1" r="1"></circle>
-                      </svg>
-                      Remote / USA
-                    </dd>
-                  </div>
-                  <div class="col-span-2 col-start-1 w-full flex-none">
-                    <dt class="sr-only">Title</dt>
-                    <dd
-                      class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
-                      <a
-                        href="https://careers.iconplc.com/job/biosample-operations-specialist-site-management-associate-home-based-in-remote-jid-27239">
-                        <span
-                          class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                        Biosample Operations Specialist (Site Management
-                        Associate)
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="col-start-1 mr-2.5 flex-none">
-                    <dt class="sr-only">Type</dt>
-                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
                   <!--div class="col-span-3 -ml-2.5 flex">
                   <dt class="sr-only">Salary</dt>
