tri inc. links all updated

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://technical-resources-international.jobs.net/jobs?keywords=660%2F224%2F1086">
+                        href="https://tech-res.hua.hrsmart.com/hr/ats/Posting/view/8">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
                         Associate Director of Clinical Operations
@@ -390,7 +390,7 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://technical-resources-international.jobs.net/jobs?keywords=678%2F228%2F1104">
+                        href="https://tech-res.hua.hrsmart.com/hr/ats/Posting/view/29">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
                         Director of Regulatory Affairs
@@ -528,7 +528,7 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://technical-resources-international.jobs.net/jobs?keywords=416%2F136%2F1016">
+                        href="https://tech-res.hua.hrsmart.com/hr/ats/Posting/view/3">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
                         Clinical Research Associate
