--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
-                    src="img/epam-logo.png"
+                    src="img/pwc-logo.png"
                     alt="" />
                   <div
                     class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
@@ -574,7 +574,7 @@
                   <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      EPAM
+                      pwc
                     </dd>
                   </div>
                   <div
@@ -588,7 +588,7 @@
                         class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
                         <circle cx="1" cy="1" r="1"></circle>
                       </svg>
-                      Remote / USA
+                      Onsite / Multiple / USA
                     </dd>
                   </div>
                   <div class="col-span-2 col-start-1 w-full flex-none">
@@ -596,10 +596,10 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://www.epam.com/careers/job-listings/job.85700.remote_life-sciences-client-partner-portfolio-head-remote">
+                        href="https://jobs.us.pwc.com/job/united-states/life-sciences-pmo-director/932/45959154736">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                        Life Sciences Client Partner, Portfolio Head
+                        Life Sciences PMO Director
                       </a>
                     </dd>
                   </div>
@@ -607,7 +607,7 @@
                     <dt class="sr-only">Type</dt>
                     <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
-                  <div class="col-span-3 -ml-2.5 flex">
+                  <!--div class="col-span-3 -ml-2.5 flex">
                     <dt class="sr-only">Salary</dt>
                     <dd
                       class="flex items-center text-xs leading-6 text-gray-600">
@@ -617,9 +617,9 @@
                         class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
                         <circle cx="1" cy="1" r="1"></circle>
                       </svg>
-                      $152,000 - $250,000
+                      $206,880 - $231,703 (estimate)
                     </dd>
-                  </div>
+                  </div-->
                 </dl>
               </div>
             </div>
@@ -632,7 +632,7 @@
                 <div class="relative h-20 w-20 flex-none sm:h-24 sm:w-24">
                   <img
                     class="absolute inset-0 h-full w-full rounded-full object-cover"
-                    src="img/vtech-logo.png"
+                    src="img/pwc-logo.png"
                     alt="" />
                   <div
                     class="absolute inset-0 rounded-full ring-1 ring-inset ring-black/[0.08]"></div>
@@ -642,7 +642,7 @@
                   <div class="col-span-2 mr-2.5 flex sm:mr-0">
                     <dt class="sr-only">Company</dt>
                     <dd class="text-xs font-semibold leading-6 text-gray-900">
-                      Virginia Tech
+                      pwc
                     </dd>
                   </div>
                   <div
@@ -656,7 +656,7 @@
                         class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400 sm:hidden">
                         <circle cx="1" cy="1" r="1"></circle>
                       </svg>
-                      Onsite / Blacksburg, VA / USA
+                      Onsite / Multiple / USA
                     </dd>
                   </div>
                   <div class="col-span-2 col-start-1 w-full flex-none">
@@ -664,23 +664,31 @@
                     <dd
                       class="text-[0.9375rem] font-semibold leading-6 text-gray-900">
                       <a
-                        href="https://virginia-tech.talentify.io/job/life-sciences-lab-support-temporary-assignments-blacksburg-va-virginia-tech-524034">
+                        href="https://jobs.us.pwc.com/job/chicago/pharma-life-sciences-and-crop-sciences-client-relationship-executive/932/50326195424">
                         <span
                           class="absolute -inset-x-4 inset-y-[calc(-1*(theme(spacing.6)+1px))] sm:-inset-x-6 sm:rounded-2xl lg:-inset-x-8"></span>
-                        Life Sciences Lab Support
+                        Pharma, Life, Sciences, & Crop Sciences Client
+                        Relationship Executive
                       </a>
                     </dd>
                   </div>
                   <div class="col-start-1 mr-2.5 flex-none">
                     <dt class="sr-only">Type</dt>
-                    <dd class="text-xs leading-6 text-gray-600">Part-time</dd>
+                    <dd class="text-xs leading-6 text-gray-600">Full-time</dd>
                   </div>
                   <!--div class="col-span-3 -ml-2.5 flex">
-                  <dt class="sr-only">Salary</dt>
-                  <dd class="flex items-center text-xs leading-6 text-gray-600">
-                    <svg viewBox="0 0 2 2" aria-hidden="true" class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400"><circle cx="1" cy="1" r="1"></circle></svg>$140,000 - $180,000
-                  </dd>
-                </div-->
+                    <dt class="sr-only">Salary</dt>
+                    <dd
+                      class="flex items-center text-xs leading-6 text-gray-600">
+                      <svg
+                        viewBox="0 0 2 2"
+                        aria-hidden="true"
+                        class="mr-2 h-0.5 w-0.5 flex-none fill-gray-400">
+                        <circle cx="1" cy="1" r="1"></circle>
+                      </svg>
+                      $206,880 - $231,703 (estimate)
+                    </dd>
+                  </div-->
                 </dl>
               </div>
             </div>
